# hypothesis-array-api

./: .readthedocs.yml  MIT.txt  README.md  hypothesis_array.py  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
tests/: __init__.py  array_module_utils.py  conftest.py  test_argument_validation.py  test_arrays.py  test_axes.py  test_dtypes.py  test_fill_values.py  test_foo.py  test_from_dtype.py  test_gen_data.py  test_indices.py  test_narrow_floats.py  test_partial_adoptors.py  test_pretty.py  test_scalar_dtypes.py  test_shapes.py  test_strategies_namespace.py  xputils.py
tests/common/: __init__.py  arguments.py  costbounds.py  debug.py  setup.py  strategies.py  utils.py
